--- a/views/Gestion/Planificacion/historica.html
+++ b/views/Gestion/Planificacion/historica.html
@@ -69,32 +69,31 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
-                            <th>Patente</th>
-                            <th>Transportista</th>
-                            <th>Tipo Camion</th>
-                            <th>Crear S.EX</th>
+                            <th>Localidad</th>
+                            <th>Lunes</th>
+                            <th>Martes</th>
+                            <th>Mierco</th>
+                            <th>Jueves</th>
+                            <th>Vierne</th>
+                            <th>Sabado</th>
+                            <th>Doming</th>
+                            <th>Total</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">BBBB-01</a></td>.
-                            <td>TRANSPORTES PIPAU</td>
-                            <td>CM45</td>
-                            <td><input type="checkbox" value="es"> </td>
-                        </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">BBBC-02</a></td>
-                            <td>TRANSPORTES DEL PACIFICO</td>
-                            <td>CM30</td>
+                            <td><a href="carga_todos.html">FUERA NORTE</a></td>.
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>215.1</td>
+                            <td>1225.5<td></td>
 
-                            <td><input type="checkbox" value="es"> </td>
                         </tr>
-                        <tr class="odd gradeX">
-                            <td><a href="carga_todos.html">BBCC-01</a></td>
-                            <td>TRANSPORTES EL SUR</td>
-                            <td>CM100</td>
-                            <td><input type="checkbox" value="es"> </td>
-                        </tr>
+
                         </tbody>
                     </table>
                     <div class="col-md-1">
