--- a/views/Gestion/Documento/Devolucion/devolver.html
+++ b/views/Gestion/Documento/Devolucion/devolver.html
@@ -110,36 +110,54 @@
                     <table id="data-table" class="table table-striped table-bordered">
                         <thead>
                         <tr>
+                            <th>N°ND</th>
+                            <th>N°Boleta</th>
                             <th>N°Viaje</th>
                             <th>Tipo</th>
                             <th>Transportista</th>
                             <th>Origen</th>
                             <th>Destino</th>
                             <th>N°MC</th>
-                            <th>N°Boleta</th>
-                            <th>N°ND</th>
                             <th>Estado ND</th>
                             <th>Localidad</th>
                             <th>Metodo</th>
                             <th>Tamaño</th>
+                            <th>Devolver</th>
                         </tr>
                         </thead>
                         <tbody>
                         <tr class="odd gradeX">
                             <td><a href="../../carga_todos.html">214222</a></td>
+                            <td><a href="../../carga_todos.html">4515227</a></td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
                             <td>DDC</td>
                             <td>TRANSPORTES PIPAU</td>
                             <td>55 CD - SANTIAGO</td>
                             <td>95 - ZONA 3</td>
                             <td><a href="../../carga_todos.html">15222</a></td>
-                            <td><a href="../../carga_todos.html">4515227</a></td>
-                            <td><a href="../../carga_todos.html">15222</a></td>
+
                             <td>EN REPARTO</td>
                             <td>97 - ZONA 3</td>
                             <td>EXPRESS</td>
                             <td>MEDIANO</td>
+                            <td><input type="checkbox" value="es"> </td>
                         </tr>
+                        <tr class="odd gradeX">
+                            <td><a href="../../carga_todos.html">214224</a></td>
+                            <td><a href="../../carga_todos.html">4515227</a></td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
+                            <td>DDC</td>
+                            <td>TRANSPORTES PIPAU</td>
+                            <td>55 CD - SANTIAGO</td>
+                            <td>95 - FUERA SANTIAGO</td>
+                            <td><a href="../../carga_todos.html">15222</a></td>
 
+                            <td>EN REPARTO</td>
+                            <td>95 FUERA SANTIAGO</td>
+                            <td>EXPRESS</td>
+                            <td>EXTRA GRANDE</td>
+                            <td><input type="checkbox" value="es"> </td>
+                        </tr>
                         </tbody>
                     </table>
                     <div class="col-md-1">
@@ -149,6 +167,7 @@
                     </div>
                     <div class="col-md-6">
                         <p>
+                            <button class="btn btn-danger" >Devolver</button>
                             <button class="btn btn-info" >Cancelar</button>
                         </p>
                     </div>
